<?xml version="1.0" encoding="utf-8"?>
<!--suppress ALL -->
<AbsoluteLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:ignore="Deprecated">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="-3dp"
        android:layout_y="-207dp"
        android:contentDescription="@string/todo"
        tools:srcCompat="@tools:sample/backgrounds/scenic" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_x="14dp"
        android:layout_y="384dp"
        android:text="@string/this_is_weed" />

    <CheckBox
        android:id="@+id/checkBox3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="267dp"
        android:layout_y="418dp"
        android:text="@string/mark_with_x" />

    <CheckBox
        android:id="@+id/checkBox2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="267dp"
        android:layout_y="370dp"
        android:text="@string/mark_with_x" />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="267dp"
        android:layout_y="323dp"
        android:text="@string/mark_with_x" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="374dp"
        android:layout_height="33dp"
        android:layout_x="16dp"
        android:layout_y="284dp"
        android:text="@string/what_do_you_see_on_the_picture" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_x="15dp"
        android:layout_y="337dp"
        android:text="@string/this_is_wheat" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_x="15dp"
        android:layout_y="433dp"
        android:text="@string/this_is_rain_drop" />

    <TextView
        android:id="@+id/editTextTextPersonName"
        android:layout_width="375dp"
        android:layout_height="224dp"
        android:layout_x="18dp"
        android:layout_y="491dp"
        android:ems="10"
        android:text="@string/dew_phenomenon" />

</AbsoluteLayout>
